--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
     <string name="app_name">IFMO Android Homework Service</string>
-    <string name="start_service">Запустить сервис</string>
-    <string name="stop_service">Остановить сервис</string>
-    <string name="image_description">Загруженная сервисом картинка</string>
+
+    <string name="image_description">Downloaded image by service</string>
+
+    <string name="start_service">Start service</string>
+    <string name="stop_service">Stop service</string>
+
+    <string name="reloaded">Image updated</string>
+
+    <string name="image_download">Image Download</string>
+    <string name="preparing_to_download">Preparing to download…</string>
+    <string name="download_in_progress">Download in progress…</string>
+    <string name="download_complete">Download complete</string>
+    <string name="download_error">Download error</string>
+    <string name="saving">Saving…</string>
 </resources>
