Click on notification starts an app now + app icon on the main scren, when downloaded image not available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="download_complete">Download complete</string>
     <string name="download_error">Download error</string>
     <string name="saving">Saving…</string>
+    <string name="no_available_image">No available image</string>
 </resources>
