--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,24 @@
 
     <string name="image_description">Downloaded image by service</string>
 
+    <string name="refresh_image">Refresh image</string>
     <string name="start_service">Start service</string>
     <string name="stop_service">Stop service</string>
 
-    <string name="reloaded">Image updated</string>
+    <string name="refreshing_image">Refreshing image…</string>
+    <string name="starting_service">Starting service…</string>
+    <string name="stopping_service">Stopping service…</string>
+
+    <string name="service_started">Service started</string>
+    <string name="image_updated">Image updated</string>
+    <string name="service_stopped">Service stopped</string>
     <string name="no_available_image">No available image</string>
 
     <string name="image_download">Image Download</string>
     <string name="preparing_to_download">Preparing to download…</string>
     <string name="download_in_progress">Download in progress…</string>
+    <string name="saving">Saving…</string>
+    <string name="saving_error">Saving error</string>
     <string name="download_complete">Download complete</string>
     <string name="download_error">Download error</string>
-    <string name="saving">Saving…</string>
 </resources>
